# ParCluster

./: #test_HT_r.sh#  .gitignore  .gitmodules  CMakeLists.txt  README.md  brutetest.sh  data.csv  data_compare.csv  data_density.csv  data_r.csv  data_r_density_only.csv  data_r_dep_only.csv  out1  out2  plot_graphs.py  process_data.py  process_dpc_data.py  pyproject.toml  test_GeoLife.sh~  test_GeoLife_density_r.sh  test_GeoLife_r.sh  test_HT_density_r.sh  test_HT_r.sh  test_PAMAP2_r.sh  test_all.sh  test_all_synthetic.sh  test_fenwick_synthetic.sh  test_fenwick_synthetic.sh~  test_geolife.sh  test_geolife.sh~  test_gowalla.sh  test_gowalla_density_r.sh  test_gowalla_r.sh  test_priority_synthetic.sh  test_priority_synthetic.sh~  test_query.sh  test_query_r.sh~  test_r_synthetic.sh~  test_sensor5.sh  test_sensor5_r.sh  (+9 more)
bash_files/: test_GeoLife_r.sh~  test_HT.sh  test_HT_density_r.sh~  test_PAMAP2.sh  test_PAMAP2.sh~  test_PAMAP2_density_r.sh  test_PAMAP2_r.sh~  test_gowalla.sh  test_gowalla_r.sh  test_priority_synthetic.sh  test_query_density_r.sh  test_query_r.sh  test_r_synthetic.sh  test_sensor.sh  test_sensor5.sh~  test_sensor5_density_r.sh  test_sensor5_density_r.sh~  test_sensor5_r.sh  test_varden.sh  test_varden_fast.sh
include/: bottomKdTree  dataset  dynamicKdTree  kdTree  parameter.h  parameter.h~  pargeo  parlay  parseCommandLine.h  priorityKdTree  pseudoDynamicKdTree
include/divCount/: divCount.h
include/divRangeTree/: divRangeTree.h
include/fenwickKdTree/: fenwickKdTree.h  fenwickKdTree.h~
include/origKdTree/: kdTree.h  knnImpl.h  rangeSearchImpl.h  treeImpl.h
include/quickCount/: quickCount.h
notebooks/: data_reader.ipynb  data_visualizer.ipynb  plot_comparison.ipynb  plot_line.ipynb
results/: brute_uniform_10.txt  brute_uniform_1000.txt  brute_uniform_10000.txt  brute_uniform_100000.txt  brute_uniform_1000000.txt  dyn_uniform_10.txt  dyn_uniform_1000.txt  dyn_uniform_10000.txt  dyn_uniform_100000.txt  dyn_uniform_1000000.txt  reader.py  static_uniform_10.txt  static_uniform_1000.txt  static_uniform_10000.txt  static_uniform_100000.txt  static_uniform_1000000.txt
results/GeoLife1/: fenwick_1000_0.01_60.txt  fenwick_1000_0.02_60.txt  fenwick_1000_0.04_60.txt  fenwick_1000_0.08_60.txt  fenwick_1000_0.16_60.txt  fenwick_1000_0.32_60.txt  fenwick_1000_0.64_60.txt  fenwick_1000_1.28_60.txt  fenwick_1000_10.24_60.txt  fenwick_1000_1_1.txt  fenwick_1000_1_16.txt  fenwick_1000_1_2.txt  fenwick_1000_1_30.txt  fenwick_1000_1_4.txt  fenwick_1000_1_60.txt  fenwick_1000_1_8.txt  fenwick_1000_2.56_60.txt  fenwick_1000_20.48_60.txt  fenwick_1000_5.12_60.txt  priority_1000_0.01_60.txt  priority_1000_0.02_60.txt  priority_1000_0.04_60.txt  priority_1000_0.08_60.txt  priority_1000_0.16_60.txt  priority_1000_0.32_60.txt  priority_1000_0.64_60.txt  priority_1000_1.28_60.txt  priority_1000_10.24_60.txt  priority_1000_1_1.txt  priority_1000_1_16.txt  priority_1000_1_2.txt  priority_1000_1_30.txt  priority_1000_1_4.txt  priority_1000_1_60.txt  priority_1000_1_8.txt  priority_1000_2.56_60.txt  priority_1000_20.48_60.txt  priority_1000_5.12_60.txt  static_1000_0.01_60.txt  static_1000_0.02_60.txt  (+17 more)
results/GeoLife2/: fenwick_1000_0.01_60.txt  fenwick_1000_0.02_60.txt  fenwick_1000_0.04_60.txt  fenwick_1000_0.08_60.txt  fenwick_1000_0.16_60.txt  fenwick_1000_0.32_60.txt  fenwick_1000_0.64_60.txt  fenwick_1000_1.28_60.txt  fenwick_1000_10.24_60.txt  fenwick_1000_1_1.txt  fenwick_1000_1_16.txt  fenwick_1000_1_2.txt  fenwick_1000_1_30.txt  fenwick_1000_1_4.txt  fenwick_1000_1_60.txt  fenwick_1000_1_8.txt  fenwick_1000_2.56_60.txt  fenwick_1000_20.48_60.txt  fenwick_1000_5.12_60.txt  priority_1000_0.01_60.txt  priority_1000_0.02_60.txt  priority_1000_0.04_60.txt  priority_1000_0.08_60.txt  priority_1000_0.16_60.txt  priority_1000_0.32_60.txt  priority_1000_0.64_60.txt  priority_1000_1.28_60.txt  priority_1000_10.24_60.txt  priority_1000_1_1.txt  priority_1000_1_16.txt  priority_1000_1_2.txt  priority_1000_1_30.txt  priority_1000_1_4.txt  priority_1000_1_60.txt  priority_1000_1_8.txt  priority_1000_2.56_60.txt  priority_1000_20.48_60.txt  priority_1000_5.12_60.txt  static_1000_0.01_60.txt  static_1000_0.02_60.txt  (+17 more)
results/GeoLife3/: fenwick_1000_0.01_60.txt  fenwick_1000_0.02_60.txt  fenwick_1000_0.04_60.txt  fenwick_1000_0.08_60.txt  fenwick_1000_0.16_60.txt  fenwick_1000_0.32_60.txt  fenwick_1000_0.64_60.txt  fenwick_1000_1.28_60.txt  fenwick_1000_10.24_60.txt  fenwick_1000_1_1.txt  fenwick_1000_1_16.txt  fenwick_1000_1_2.txt  fenwick_1000_1_30.txt  fenwick_1000_1_4.txt  fenwick_1000_1_60.txt  fenwick_1000_1_8.txt  fenwick_1000_2.56_60.txt  fenwick_1000_20.48_60.txt  fenwick_1000_5.12_60.txt  priority_1000_0.01_60.txt  priority_1000_0.02_60.txt  priority_1000_0.04_60.txt  priority_1000_0.08_60.txt  priority_1000_0.16_60.txt  priority_1000_0.32_60.txt  priority_1000_0.64_60.txt  priority_1000_1.28_60.txt  priority_1000_10.24_60.txt  priority_1000_1_1.txt  priority_1000_1_16.txt  priority_1000_1_2.txt  priority_1000_1_30.txt  priority_1000_1_4.txt  priority_1000_1_60.txt  priority_1000_1_8.txt  priority_1000_2.56_60.txt  priority_1000_20.48_60.txt  priority_1000_5.12_60.txt  static_1000_0.01_60.txt  static_1000_0.02_60.txt  (+17 more)
results/HT1/: fenwick_30_0.3_176.txt  fenwick_30_0.3_60.txt  fenwick_30_0.5_1.txt  fenwick_30_0.5_16.txt  fenwick_30_0.5_2.txt  fenwick_30_0.5_30.txt  (+45 more)
src/: CMakeLists.txt  IO.h  dpc_sddp.cpp  dpc_sddp.h  dpc_sddp_main.cpp  fenwickKdTree.cpp  python_bindings.cpp
src/dataset/: CMakeLists.txt  seedSpreader.cpp
src/par_dpc/: __init__.py
tests/: .gitignore  CMakeLists.txt  brutetest.sh  density_query.cpp  density_query_brute.cpp  density_query_divcount.cpp  dep_ptr.cpp  dep_ptr_brute.cpp  dep_ptr_dyn.cpp  dep_ptr_par.cpp  dep_ptr_priority.cpp  dep_ptr_static.cpp  dep_ptr_static_batch.cpp  dependent_point_search.cpp  dpc_alternate.cpp  dpc_divcount.cpp  dpc_fenwick.cpp  dpc_priority.cpp  dpc_static.cpp  example_point_cloud_dense.txt~  int  int_dense  ptr_gen  ptr_gen.cpp  static_dep_ptr.cpp  static_dep_ptr_v1.cpp  test_parlay.cpp  uniform_generator.cpp
(+17966 files in other folders)
